FEATURE implementing game logic
- added gui for the game
- session management for the game in server